install translation service - use json file for language translation

--- a/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
+++ b/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-10">
-      <h2>Coordonnées collaborateur</h2>
+      <h2>{{ 'PING' | translate }}</h2>
       <form name="userBasicInformationForm" [formGroup]="userBasicInformationForm">
         
         <!-- lastname -->
